--- a/经验/面试跳槽必备.md
+++ b/经验/面试跳槽必备.md
@@ -1,26 +1,29 @@
-
-* 二、面试模拟与技巧
-* 三、一面
-* 四、二面三面
-* 五、业务能力
-* 六、终面
-* 七、总结
+- 二、面试模拟与技巧
+- 三、一面
+- 四、二面三面
+- 五、业务能力
+- 六、终面
+- 七、总结
 
 #### 二、面试模拟与技巧
 
 1: 如何看待面试
->面试是一种：经过组织者精心设计，以交谈和观察为主要手段，由表及里测评考生的 知识、能力、经验 等有关素质的一种考试活动
+
+> 面试是一种：经过组织者精心设计，以交谈和观察为主要手段，由表及里测评考生的 知识、能力、经验 等有关素质的一种考试活动
 
 2: 面试准备
-- 职位描述分析  --侧重方向 知识面
+
+- 职位描述分析 --侧重方向 知识面
 - 业务分析或实战模拟 -- 观察网页
-- 技术栈准备 
+- 技术栈准备
 - 自我介绍 适度发挥
+
   > 适时讨疑问，不会，我需要思考一下，参考一下资料，可不可以给我一下参考资料，能不能请教一下,了解技术难度，技术深度聪明；
- 
+
   > 节奏平稳 就怕没去想就放弃 勇于承担责任 思维独特解决问题独特；
- 
+
 #### 三、一面
+
 - 准备充分
 - 知识要系统
 - 沟通要简洁
@@ -28,39 +31,42 @@
 - 态度要谦虚
 - 回答要灵活
 
-
-
 #### 四、二面三面
+
 - 知识面要广
 - 理解要深刻
+
 - 内心要真诚
 - 态度要谦虚
 - 回答要灵活
 - 要学会赞美
 
 **渲染机制**
-- 什么是DOCTYPE及作用
-- 浏览器渲染过程
-- 重排Reflow
-- 重绘Repaint
-- 布局Layout
 
-**js运行机制**
- - 什么是单线程
-   - 单线程 同一时间只能做一件事
- - 什么是任务队列
-   - 任务队列 同步|异步 异步任务要挂起，同步任务执行完毕，执行异步任务 （异步任务的放入时间 和 执行时间）
- - 什么是 Event Loop
-    执行栈：执行了同步任务
-    什么时候取任务：
-    什么时候往任务队列中放：
- - 开启异步任务 
-    - setTimeOut setInterval
-    - DOM 事件
-    - promise
- - 那些语句会放到异步任务队列中
- - 理解语句放入任务队列的时机 
->浏览器js引擎，遇到setTimeout识别是一个异步任务，要把这个模块拿走，【不是立刻放到异步任务队列】，同步任务执行完了之后，用户定的时间到了1000s，timer模块会把它放到异步任务队列中，运行栈为空之后，读异步栈，把异步栈内容放入到运行栈同步，为空继续去异步栈读；如此循环就要Event Loop
+- 什么是 DOCTYPE 及作用
+- 浏览器渲染过程
+- 重排 Reflow
+- 重绘 Repaint
+- 布局 Layout
+
+**js 运行机制**
+
+- 什么是单线程
+  - 单线程 同一时间只能做一件事
+- 什么是任务队列
+  - 任务队列 同步|异步 异步任务要挂起，同步任务执行完毕，执行异步任务 （异步任务的放入时间 和 执行时间）
+- 什么是 Event Loop
+  执行栈：执行了同步任务
+  什么时候取任务：
+  什么时候往任务队列中放：
+- 开启异步任务
+  - setTimeOut setInterval
+  - DOM 事件
+  - promise
+- 那些语句会放到异步任务队列中
+- 理解语句放入任务队列的时机
+  > 浏览器 js 引擎，遇到 setTimeout 识别是一个异步任务，要把这个模块拿走，【不是立刻放到异步任务队列】，同步任务执行完了之后，用户定的时间到了 1000s，timer 模块会把它放到异步任务队列中，运行栈为空之后，读异步栈，把异步栈内容放入到运行栈同步，为空继续去异步栈读；如此循环就要 Event Loop
+
 ```
 异步任务:微任务(microtask) 和 宏任务(task)
 执行栈中的代码 => 微任务 => 宏任务
@@ -71,7 +77,7 @@ Node中的宏任务：postMessage setTimeout setInterval...
 
 setImmediate 的主要优势就是，如果在 I/O 操作的回调里，setImmediate 的回调总是比 setTimeout 的回调先执行。
 ```
-    
+
 ```
 setTimeout(() => {
 	console.log(2)
@@ -90,6 +96,7 @@ setTimeout(() => {
 如果嵌套级别大于5，并且超时小于4，则将timeout设置为4
 
 ```
+
 ```
     // 执行顺序问题，考察频率挺高的，先自己想答案**
     setTimeout(function () {
@@ -107,87 +114,90 @@ setTimeout(() => {
 
  先执行new Promise中的console.log(2),then后面的不执行属于微任务
  然后执行console.log(4)
- ```
+```
+
 **页面性能**
 
 - 性能优化
-使用缓存和内存
-减少CPU计算 减少网络请求 减少IO操作
+  使用缓存和内存
+  减少 CPU 计算 减少网络请求 减少 IO 操作
 
 - 性能优化-加载
-压缩 合并 打包 CDN SSR 
+  压缩 合并 打包 CDN SSR
 
 - 性能优化-渲染
-减少CPU计算
-css放前 js放后 图片预加载
-减少DOM操作，多个DOM操作合并
-事件节流 事件提前执行 
+  减少 CPU 计算
+  css 放前 js 放后 图片预加载
+  减少 DOM 操作，多个 DOM 操作合并
+  事件节流 事件提前执行
 
 **错误监控**
+
 - 前端错误分类
 - 错误捕获方法 事件模型
 - 上报错误基本原理
-1: ajax通信上报 （可以做通常不）
-2: 利用image对象上报
+  1: ajax 通信上报 （可以做通常不）
+  2: 利用 image 对象上报
 
 #### 五、业务能力
+
 **三面上面说项目优势点**
->没有最优点，任何事物都可以做到极致，说出出发点和考究
+
+> 没有最优点，任何事物都可以做到极致，说出出发点和考究
 
 `面试准备`
+
 - 准备要充分 -- 亮点 架构 人员结构
 - 描述要演练 -- 提前准备好
-- 引导找时机 
-- 优势要发挥 -- 用词要发挥  
-- 回答要灵活 
+- 引导找时机
+- 优势要发挥 -- 用词要发挥
+- 回答要灵活
 
 `面试模拟`
-- 业务能力 
-    - 被动回答
+
+- 业务能力
+  - 被动回答
     > 我做过什么业务
-      - 例子：独立负责**数据走势图开发
-    > 负责业务的业绩
-      - 例子：历时*周完成所有**开发，用户量上涨15%
-    > 使用了什么技术方案
-      - 例子：常规canvas方案，使用vml+svg方案
-    > 突破了什么技术难点
-      - 例子：解决了走势**的开发
-    > 遇到了最大问题
-      - 例子：**的原理，计算等
-    > 最大收获是什么
-      - 例子：对业务理解更加深入，对技术图表更有把控
-- 团队协作能力 （主动描述）   
+    - 例子：独立负责\*\*数据走势图开发
+      > 负责业务的业绩
+    - 例子：历时\*周完成所有\*\*开发，用户量上涨 15%
+      > 使用了什么技术方案
+    - 例子：常规 canvas 方案，使用 vml+svg 方案
+      > 突破了什么技术难点
+    - 例子：解决了走势\*\*的开发
+      > 遇到了最大问题
+    - 例子：\*\*的原理，计算等
+      > 最大收获是什么
+    - 例子：对业务理解更加深入，对技术图表更有把控
+- 团队协作能力 （主动描述）
 - 事务推动能力 （主动描述）
-    - 推动历史算法更新换代
-    - 推动专题 建立
-    - 主导客服系统建立
-    - 完成多项专利申请
+  - 推动历史算法更新换代
+  - 推动专题 建立
+  - 主导客服系统建立
+  - 完成多项专利申请
 - 带人能力 （主动描述）
-    - 带一个实习生完成专题的开发 社招维护与开发
-    - 代码规范 review
-- 其他能力 
+  - 带一个实习生完成专题的开发 社招维护与开发
+  - 代码规范 review
+- 其他能力
 
 #### 六、终面
+
 - 职业竞争力
-    - 业务能力 例子：彩票行业第一
-    - 学习能力 列子：经常看学习视频博客
-    - 无上限付出 例子：加班 
-    - 思考能力 例子：爱思考 新技术 听一些分享
-- 职业规划
-    - 长期目标：业务上面的专家，技术上吗不断吸收
-    - 短期目标：清楚岗位业务目标，为公司业务做到极致，工具类
-    - 怎么做方法：分享会，工具思想
-    - 多赞美  
-    - 有主见，做事果断 善于沟通，主动沟通
-`体现`
+  - 业务能力 例子：彩票行业第一
+  - 学习能力 列子：经常看学习视频博客
+  - 无上限付出 例子：加班
+  - 思考能力 例子：爱思考 新技术 听一些分享
+- 职业规划 - 长期目标：业务上面的专家，技术上吗不断吸收 - 短期目标：清楚岗位业务目标，为公司业务做到极致，工具类 - 怎么做方法：分享会，工具思想 - 多赞美  
+   - 有主见，做事果断 善于沟通，主动沟通
+  `体现`
 - 逻辑顺畅
 - 上进有责任心
 - 果断 反应速度很快
 
-
 #### 七、总结
+
 一面：重基础，懂原理，要思考，知进退，势不可挡
 二面：横向扩展，项目结合，做到有的放矢
 三面：有经验，懂合作，有担当，懂规矩，察眼观色（是否双向感兴趣）
 终面：会沟通，要上进，好性格，有主见，强逻辑，无可挑剔
-复盘：胜不骄，败不馁，总结经验，步步为营，多拿几个offer
+复盘：胜不骄，败不馁，总结经验，步步为营，多拿几个 offer
