--- a/面试题/js/40.'use strict' 的作用是什么.md
+++ b/面试题/js/40.'use strict' 的作用是什么.md
@@ -1,4 +1,7 @@
 # 40.'use strict' 的作用是什么
+旨在减少常见错误，更健壮、安全
+
+
 	- 意外创建全局变量 // message = "Hello JavaScript! "; //  这一行代码就会抛出 ReferenceError 
 	- 不能使用 delete 删除变量 var x;
 delete x; // !!! 语法错误
@@ -20,3 +23,4 @@ var public = 'hello'; // !!! 语法错误
 	- eval不在为上下文中创建变量或函数
 	- 禁止使用with语句
 	- 全局作用域的函数中的this不再指向全局而是undefined
+  - arguments 禁用
