--- a/面试题/js/35.isNaN 和 number.isNaN 区别.md
+++ b/面试题/js/35.isNaN 和 number.isNaN 区别.md
@@ -5,7 +5,9 @@
 isNaN 是 ES5
 isNaN 会尝试把值转化为 Number 类型
 
+- isNaN('hello') true
 - isNaN([]) false
+- isNaN(undefined) true
 - isNaN('4') false
 
 ## Number.isNaN
@@ -17,3 +19,21 @@ Number.isNaN 是 es6
 - Number.isNaN(NaN) //true
 - Number.isNaN(null) // false
 - const abc = '12' Number.isNaN(abc) === false //
+
+```js
+isNaN("hello");         // true，因为 "hello" 被尝试转换为数字
+Number.isNaN("hello"); // false，"hello" 不是 NaN
+
+isNaN(NaN);             // true
+Number.isNaN(NaN);     // true
+
+isNaN(undefined);       // true，undefined 被尝试转换为 NaN
+Number.isNaN(undefined); // false
+
+isNaN(null);            // false，null 被尝试转换为 0
+Number.isNaN(null);     // false
+
+isNaN({});              // true，{} 被尝试转换为 NaN
+Number.isNaN({});      // false
+
+```
