--- a/面试题/js/5.引用类型怎么存储，js 中的堆和栈有什么区别.md
+++ b/面试题/js/5.引用类型怎么存储，js 中的堆和栈有什么区别.md
@@ -10,7 +10,7 @@
 - 特点：
   - 连续有序：栈空间连续，增加删除只需要移动指针，操作速度很快
   - 空间有限：栈满了会抛错
-- 何时创建：执行函数时创建，函数执行完毕，栈就会笑会
+- 何时创建：执行函数时创建，函数执行完毕，栈就会销毁
 - 应用场景：push pop
 
 ## 堆 heap
