--- a/面试题/2021-07.md
+++ b/面试题/2021-07.md
@@ -24,12 +24,12 @@
 - ✅ 20.设计模式了解应用，发布订阅模式, 单例模式，保证只有给弹窗，当一个弹窗打开的时候，关闭其他弹窗
 
 - ✅ 21.ajax fetch axios 区别，ajax 实现原理, axios 原理是什么
-- ✅ 22.不用 promise, 那些可实现 promise generator
-- ✅ 23.Promise 原理、方法，promise race all allsetted
+- 22.不用 promise, 那些可实现 promise generator
+- 23.Promise 原理、方法，promise race all allsetted
 - ✅ 24.为什么原生的 form 表单提交没有跨域问题（form 请求和 ajax 请求有什么不同）
-- ✅ 25.防抖和节流应用场景
+- 25.防抖和节流应用场景
 - ✅ 26.new 操作符, 构造函数和普通函数区别, 函数有 return 返回什么
-- 27.什么是作用域链、执行上下文、词法环境 🌹
+- 27.什么是作用域链、执行上下文、词法环境
 - ✅ 28.[]+{}
 - ✅ 29.模块化
 - ✅ 30.箭头函数于普通函数区别
@@ -38,7 +38,7 @@
 - ✅ 33 RAF 和 RIC 是什么
 - ✅ 34.a===1&&a===2&&a===3 为 true
 - ✅ 35.isNaN 和 number.isNaN 区别
-- ✅ 36.随机数
+- 36.随机数
 - ✅ 37.正则
 - 38.位运算
 - ✅ 39.进程通信的几种方式
