--- a/面试题/2021-07.md
+++ b/面试题/2021-07.md
@@ -53,13 +53,13 @@
 - ✅ 4.三次握手，四次挥手，为什么挥手不能用三次
 - ✅ 5.http1 和 http2 的区别， http2 做了那些改进，有哪些不足，http3 做了那些改进
 
-- ✅ 6.http 和 https 的区别, https 加密过程
+- 6.http 和 https 的区别, https 加密过程
 - ✅ 7.CDN 理解，有 CDN 和没有 CDN 区别
 - ✅ 8.DNS 寻址过程
 - ✅ 9.get 和 post 有什么区别
 - ✅ 10.TCP 和 UDP 区别是什么
 - ✅ 11.谈谈你对 dns-prefetch 的理解
-- ✅ 12.TCP 滑动窗口、重试机制
+- 12.TCP 滑动窗口、重试机制
 - ✅ 13.Conent-Type;
 - ✅ 14.理想模型
 - ✅ 15.心跳机制
