--- a/面试题/HTTP/12.TCP 滑动窗口、重试机制.md
+++ b/面试题/HTTP/12.TCP 滑动窗口、重试机制.md
@@ -16,8 +16,7 @@
 
 因为 TCP 的队首效应，如果有前面的包没有发送成功，就会不停的重试，反而造成更差的传输效率
 
-## 什么叫滑动窗口
-
+## 什么叫滑动窗口 Receiver Window
 - 主要是控制流量的，根据频率不停调整，需要控制流量的方式
 - 客户端服务器分别有自己缓存区，通过网络状况，调整发送数据大小
 
@@ -44,11 +43,15 @@
 Nagle 任意时刻内， 只能有一个未被确认的小段
 cork 小包合并成一个， 一起发送
 
-## 拥塞窗口 cwnd
+## 拥塞窗口 cwnd (Congestion Window)
+
+前面的流量控制是避免「发送方」的数据填满「接收方」的缓存，但是并不知道网络的中发生了什么。
+于是，就有了拥塞控制，控制的目的就是避免「发送方」的数据填满整个网络。
 
 - TCP 维护一个拥塞窗口 cwnd 变量，在传输过程中拥塞将此值增大，如果出现拥塞(超时重传 RTO)就将窗口值减少
-- cwnd < ssthresh 慢开始算法 指数 2 4
+- cwnd < ssthresh(慢启动门限（slow start threshold）) 慢开始算法 指数 2 4
 - cwnd > ssthresh 拥塞避免算法 线性 16
+
 
 ## 快重传
 
