--- a/面试题/js/33.RAF 和 RIC 是什么.md
+++ b/面试题/js/33.RAF 和 RIC 是什么.md
@@ -3,6 +3,27 @@
 ## requestAnimationFrame：
 
 告诉浏览器在下次重绘之前执行传入的回调函数(通常是操纵 dom，更新动画的函数)；由于是每帧执行一次，那结果就是每秒的执行次数与浏览器屏幕刷新次数一样，通常是每秒 60 次。
+```js
+let frame = 0
+let lastTime = Date.now()
+const timerange = 10000 // FPS统计打点时间间隔
+let rAFID = 0
+const performance = () => {
+  frame++
+  const now = Date.now()
+  if (now - lastTime > timerange) {
+    const fps = Math.round((frame * 1000) / (now - lastTime))
+    console.log(`[rAF] 10s内Frames: ${frame}, FPS：${fps}`)
+    frame = 0
+    lastTime = now
+  }
+  rAFID = rAF()
+}
+
+export const rAF = () => (rAFID = requestAnimationFrame(performance))
+export const cAF = () => cancelAnimationFrame(rAFID)
+
+```
 
 ## requestIdleCallback
 
