--- a/面试题/js/38.位运算.md
+++ b/面试题/js/38.位运算.md
@@ -252,3 +252,40 @@ console.log(0b0001, 0b0010) // 1 2
 
 - 补码反求源码：🤔️
 - 安全整数：Number.isSafeInteger(2\*\*53-1) true
+
+
+
+```js
+export const enum PatchFlags {
+  // 代表元素的 text 会变化 1
+  TEXT = 1,
+  // 代表元素的 class 会变化 10
+  CLASS = 1 << 1,
+  // 代表元素的 style 会变化 100
+  STYLE = 1 << 2,
+  // 代表元素的 props 会变化 1000
+  PROPS = 1 << 3,
+  // ...
+}
+
+function patchElement(n1, n2){
+    if(n2.patchFlag > 0){
+        // 有 PatchFlag，只需要更新动态部分
+        if (patchFlag & PatchFlags.TEXT) {
+            // 更新 text
+        }
+        
+        if (patchFlag & PatchFlags.CLASS) {
+            // 更新 class
+        }
+        
+        if (patchFlag & PatchFlags.PROPS) {
+            // 更新 props
+        }
+        ...
+        
+    } else {
+        // 没有 PatchFlag，全量比对并更新
+    }
+}
+```
