--- a/面试题/js/14.事件循环.md
+++ b/面试题/js/14.事件循环.md
@@ -1,7 +1,11 @@
 # 事件循环
 
 浏览器的事件处理机制&运行机制，称 EventLoop
-因为 js 是单线程，为了解决异步任务，故引入它
+
+## 为什么要有事件循环机制
+
+JS 线程和渲染线程互斥切互相阻塞(同步获取 DOM 信息)，为了避免 GUI 的卡顿，让异步操作同步执行，引入了浏览器事件循环机制
+js 在单线程情况下非阻塞的调用网络，定时器等异步 API
 
 ## 什么是：运行机制
 
