--- a/面试题/js/29.模块化.md
+++ b/面试题/js/29.模块化.md
@@ -14,6 +14,7 @@
 
 ## ESModule 是引用的导出
 
+- 静态分析，进行 treeshaking,(没有真正引入的模块代码并移除的能力)
 - 编译时输出
 - export default 默认导出是一个值，export { a } 批量导出是一个地址
 
@@ -74,3 +75,7 @@ btn.addEventListener("click", function () {
 });
 document.body.appendChild(btn);
 ```
+
+- AMD: 同步加载完之后执行，模块与模块之间是串行的加载的
+- CMD: 异步模块加载器：按需加载后执行，异步加载但是如果有依赖关系的还是串行的
+- SEA: 依赖加载优化，静态分析依赖关系，同步并行加载
