--- a/面试题/算法/总结.md
+++ b/面试题/算法/总结.md
@@ -4,9 +4,9 @@
 - 回文 [双指针比对，不相等结束]
 - 删除数组重复项[O(n)]
 - 删除有序数组重复项 [快慢指针]
+- 存在重复元素 [排序后快慢指针]
 - 反转字符串 [双指针]
 - 有序数组平方 [map.sort] [双指针排序]
-- 重复元素 [排序后快慢指针]
 
 # 思想
 - 二分
