--- a/面试题/算法/总结.md
+++ b/面试题/算法/总结.md
@@ -1,19 +1,42 @@
 # 数组
 - 两数之和 [O(n)、O(n^2)]
-- 有序两数之和 [双指针比对移动指针]
-- 回文 [双指针比对，不相等结束]
+- 有序两数之和 [头尾指针比对移动指针]
+- 回文 [头尾指针比对，不相等结束]
 - 删除数组重复项[O(n)]
 - 删除有序数组重复项 [快慢指针]
 - 存在重复元素 [排序后快慢指针]
-- 反转字符串 [双指针]
-- 有序数组平方 [map.sort] [双指针排序]
+- 反转字符串 [头尾指针]
+- 有序数组平方 [map.sort] [头尾指针排序]
 
-# 思想
-- 二分
-  - 二分查找、搜索插入位置
+# 二叉树
+
+- 遍历 广度层遍历
+- 反转
+- 二叉树深度
+- 每行最大值
+- 二叉树轮廓
+- 树结构转化数组、数组转化树结构
+- 二叉搜索树
+  - 验证[中序]、恢复[数组、排序]、有序数组转化二叉搜索树[找数组中间为根]、有序链表、搜索第k个小元素[中序遍历第k]、搜索、插入
+- 对称二叉树[左右对比]、合并二叉树[左右相加]、平衡二叉树、完全二叉树节点个数[左右+1]
+- 数组转化为二叉树 [2*index+1]
+- 二叉树的所有路径 & 之和
+
+
+# 链表
+
+- 创建一个链表结构
+- 链表反转
+- 链表是否有环
+- 删除链表中倒数第 N 个节点
+- 求单链表倒数第 k 个结点，O(n)的时间复杂度
+- 将两个有序链表合并为一个新的有序链表并返回。
+- 翻转链表的 n 到 m 之间的节点
+
+# 二分
+  - 二分查找、二叉搜索树插入位置
   - 快排
 
-递归
 回溯：全排列
 贪心：分发饼干
 动态规划：背包
