--- a/面试题/算法/总结.md
+++ b/面试题/算法/总结.md
@@ -10,11 +10,8 @@
 
 # 二叉树
 
-- 遍历 广度层遍历
-- 反转
-- 二叉树深度
-- 每行最大值
-- 二叉树轮廓
+- 遍历、广度层、反转
+- 深度\轮廓\行最大值
 - 树结构转化数组、数组转化树结构
 - 二叉搜索树
   - 验证[中序]、恢复[数组、排序]、有序数组转化二叉搜索树[找数组中间为根]、有序链表、搜索第k个小元素[中序遍历第k]、搜索、插入
@@ -25,13 +22,11 @@
 
 # 链表
 
-- 创建一个链表结构
-- 链表反转
-- 链表是否有环
-- 删除链表中倒数第 N 个节点
-- 求单链表倒数第 k 个结点，O(n)的时间复杂度
-- 将两个有序链表合并为一个新的有序链表并返回。
-- 翻转链表的 n 到 m 之间的节点
+- 反转
+- 有环、
+- 删除、删除倒数、倒数第K
+- 有序合并
+- 翻转 nm
 
 # 二分
   - 二分查找、二叉搜索树插入位置
@@ -40,3 +35,6 @@
 回溯：全排列
 贪心：分发饼干
 动态规划：背包
+
+
+1、2、
