--- a/面试题/算法/总结.md
+++ b/面试题/算法/总结.md
@@ -1,18 +1,31 @@
+# 字符串
+  - 字典序
+  - 字符串包含
+  - 最长不重复子串
+  - 包含最短字符串
+  - 获取字符串没有重复的字符和长度
+
 # 数组
-- 两数之和 [O(n)、O(n^2)]
-- 有序两数之和 [头尾指针比对移动指针]
-- 回文 [头尾指针比对，不相等结束]
-- 删除数组重复项[O(n)]
-- 删除有序数组重复项 [快慢指针]
-- 存在重复元素 [排序后快慢指针]
-- 反转字符串 [头尾指针]
+- 之和
+  - 两数之和 [O(n)、O(n^2)]
+  - 有序两数之和 [头尾指针比对移动指针]
+  - n 项和等于 sum
+- 重复
+  - 删除数组重复项[O(n)]
+  - 删除有序数组重复项 [快慢指针]
+  - 存在重复元素 [排序后快慢指针]
+- 环
+  - 回文 [头尾指针比对，不相等结束]
+  - 反转字符串 [头尾指针]
+  - 对称数
 - 有序数组平方 [map.sort] [头尾指针排序]
 
-# 二叉树
 
-- 遍历、广度层、反转
+# 二叉树
+- 遍历(广度层遍历)
 - 深度\轮廓\行最大值
-- 树结构转化数组、数组转化树结构
+- 反转
+- 树 -> 数组、数组 -> 树
 - 二叉搜索树
   - 验证[中序]、恢复[数组、排序]、有序数组转化二叉搜索树[找数组中间为根]、有序链表、搜索第k个小元素[中序遍历第k]、搜索、插入
 - 对称二叉树[左右对比]、合并二叉树[左右相加]、平衡二叉树、完全二叉树节点个数[左右+1]
@@ -26,15 +39,16 @@
 - 有环、
 - 删除、删除倒数、倒数第K
 - 有序合并
-- 翻转 nm
+- 翻转 n-m
+
+# 排序
+  - 两个有序合并一个有序
+  - 冒泡、选择、插入、快速
 
 # 二分
   - 二分查找、二叉搜索树插入位置
   - 快排
 
-回溯：全排列
-贪心：分发饼干
-动态规划：背包
-
-
-1、2、
+- 回溯：全排列
+- 贪心：分发饼干、拆红包
+- 动态规划：背包
