--- a/面试题/算法/总结.md
+++ b/面试题/算法/总结.md
@@ -1,11 +1,14 @@
 # 字符串
-  - 字典序
-  - 字符串包含
-  - 最长不重复子串
-  - 包含最短字符串
-  - 获取字符串没有重复的字符和长度
+
+- 字典序
+- 字符串包含: avcd vc
+- 无重复字符的最长子串: abcabc => abc
+- 包含最短字符串: abcd, ca => abc
+- 获取字符串没有重复的字符和长度: abcdabcd => abcd
+- 最小覆盖子串
 
 # 数组
+
 - 之和
   - 两数之和 [O(n)、O(n^2)]
   - 有序两数之和 [头尾指针比对移动指针]
@@ -18,40 +21,87 @@
   - 回文 [头尾指针比对，不相等结束]
   - 反转字符串 [头尾指针]
   - 对称数
+  - 数组回环：3 => 5，4，3，1，2
 - 有序数组平方 [map.sort] [头尾指针排序]
-
+- 洗牌
+- 移动 0
+- 数组最大连续和最大的字串
+- n \* n 矩阵
+- 寻找两个正序数组的中位数
+- 跳跃游戏
+- 接雨水
 
 # 二叉树
+
 - 遍历(广度层遍历)
 - 深度\轮廓\行最大值
 - 反转
 - 树 -> 数组、数组 -> 树
 - 二叉搜索树
-  - 验证[中序]、恢复[数组、排序]、有序数组转化二叉搜索树[找数组中间为根]、有序链表、搜索第k个小元素[中序遍历第k]、搜索、插入
-- 对称二叉树[左右对比]、合并二叉树[左右相加]、平衡二叉树、完全二叉树节点个数[左右+1]
+  - 验证[中序]、恢复[数组、排序]、有序数组转化二叉搜索树[找数组中间为根]、有序链表、搜索第 k 个小元素[中序遍历第 k]、搜索、插入
+- 对称二叉树[左右对比]、合并二叉树[左右相加]、平衡二叉树、
+- 完全二叉树节点个数[左右+1]
 - 数组转化为二叉树 [2*index+1]
 - 二叉树的所有路径 & 之和
-
+- 二叉树的最近公共祖先
 
 # 链表
+
 - 反向输出
 - 后序遍历
 - 反转
 - 有环、
-- 删除、删除倒数、倒数第K
-- 有序合并
+- 删除、删除倒数、倒数第 K
 - 翻转 n-m
 - 回文：[快慢找中，反转比对]
-
+- 有序合并：合并：k 个升序列表
+- 相交链表
+- 排序链表
 
 # 排序
-  - 两个有序合并一个有序
-  - 冒泡、选择、插入、快速
+
+- 两个有序合并一个有序
+- 冒泡、选择、插入、快速
+- 最大 k 值的方法，用堆实现的，以及算法度
 
 # 二分
-  - 二分查找、二叉搜索树插入位置
-  - 快排
 
-- 回溯：全排列
-- 贪心：分发饼干、拆红包
-- 动态规划：背包
+- 二分查找、二叉搜索树插入位置
+- 快排
+- 判断子序列
+
+# 动态规划
+
+- 最长递增子序列
+- 零钱兑换 找零钱，最少的硬币
+- 最长公共子序列
+- 最长回文子序列
+- 最大子序和
+- 买卖股票的最佳时机
+- 背包
+
+# 回溯
+
+- N 皇后
+- 全排列
+- 括号生成
+- 复原 IP 地址
+- 子集
+
+- 贪心：分发饼干、拆红包(100 拆 12 份)
+- 斐波那契数
+- [1,2,3,4,5,6,7,8,9,10] 是一个列表，将他们首尾相接，求出 x 到 y 的最短距离，x、y 在列表中
+- 文件上传，n 多文件上传，控制在 100m 内，实现文件数量最大，可以参考算法兑换零钱
+- 求一个数值的平方根，如 6.6
+- 数字转中文（滴滴，小红书）
+- 查找某个 value 路径上的 key - 回溯
+- 实现一个模版字符串
+
+- 有效的括号
+- 简化路径
+- 下一个更大元素
+- 最小栈
+
+- https://codetop.cc/#/home
+- https://juejin.cn/post/6947842412102287373#heading-42
+- 100 https://leetcode-cn.com/problem-list/2cktkvj/
